--- a/views/journey.ejs
+++ b/views/journey.ejs
@@ -1,14 +1,14 @@
 
 <% include header %>
 
-<body class="dark-bg">
+<body class="content-page dark-bg">
     <!--[if lt IE 7]>
         <div id="content" style="margin-top:100px; text-align: center;">
             <h2>Hello!</h2>
             <p>It looks like you have stumbled across my website on a non-compatible browser. Please download an compatible browser (I suggest <a href="http://www.mozilla.org/en-US/firefox">Firefox</a> or <a href="https://www.google.com/intl/en/chrome/browser/">Chrome</a>). Please contact me at <a href="mailto:john.x.sandoval@gmail.com">welcome@johnsandoval.us</a>.</p>
         </div>
     <![endif]-->
-    <div id="journey-narrative">
+    <div id="journey-narrative" class="content-container">
     
         <div>
             <h2 class="custom-font">The Journey</h2>
@@ -16,18 +16,18 @@
 
         <h3 class="custom-font">The early days</h3>
         <p>
-            Some of my corporate colleagues keep telling me “You’re not old enough if you don't know what a Commodore 64 is.” But everyone started somewhere. I can’t believe I’m about to say this: I actually have to give more than a miniscule shred of credit to the Career Day at my high school. I’m <em>not</em> one of those who was disassembling my dad’s work computer when I was 4; nor was I in (or aware of) any computer clubs. So when the guy from a local tech company said “go out and buy an HTML book” I did just that – and the journey began.
+            I can’t believe I’m about to say this, but I actually have to give more than a miniscule shred of credit to the "Career Day" at my high school. I’m <em>not</em> one of those who was disassembling my dad’s work computer when I was 4. Nor was I in (or aware of) any computer clubs. So when the guy from a local tech company said “go out and buy an HTML book” I did just that – and the journey began.
         </p>
         <p>   
-            By the time I knew what I was doing the Internet couldn’t have been hotter. Business owners were emptying their wallets into the hands of the first web developer they could find. My friend and I saw the opportunity and started our own web design firm (by “firm” I mean we had a professional-looking site – I loved the 90’s). My friend did the graphics and I did the code and away we went. We even convinced our school to let us do several independent study classes to bolster our skills. When graduation came around I had made enough to cover the first few years of college.
+            By the time I knew what I was doing the Internet couldn’t have been hotter. Business owners were emptying their wallets into the hands of the first web developer they could find. My friend and I saw the opportunity and started our own web design firm (by “firm” I mean we had a professional-looking site – I loved the 90’s). My friend did the graphics and I did the code and away we went. We even convinced our school to let us do several independent study classes to bolster our skills. When graduation came around I had made enough scratch to cover the first few years of college.
         </p>
 
         <h3 class="custom-font">College years</h3>
         <p>
-            Luckily, I was in college when “the bubble burst”. I was still making a few extra bucks on the side doing a business-card web site here and there. But I also did some pay-it-forward sites for friends and peers I’d hoped would make it big and then “remember that one time….”
+            Luckily, I was in college when the "bubble" burst. I was still making a few extra bucks on the side doing a business-card web site here and there. But I also did some pay-it-forward sites for friends and peers I’d hoped would make it big and then “remember that one time….”
         </p>
         <p> 
-            Halfway through college I landed a paid internship at a local tech company. Not much web development at first, but a definite crash course in enterprise hardware, networking, SDLC, and production support. For several years I wore many hats - everything from technical project manager and business analyst to data and software engineer. I had the opportunity to build relationships with the Engineers, DBAs, System Administrators, etc. and see how all of the moving pieces fit together. I was able to provide a lot of value on the application design and data engineering fronts. Data - relational or otherwise - just makes sense to me. I can pull it out, transform it, and deliver it in a method that users understand, be it a CRUD app or BI reporting.
+            Halfway through college I landed a paid internship at a local tech company. Not much web development at first, but a definite crash course in enterprise hardware, networking, SDLC, and production support. For several years I wore many hats; everything from technical project manager and business analyst to data and software engineer. I had the opportunity to build relationships with the Engineers, DBAs, Product Managers, System Administrators, etc. and see how all of the moving pieces fit together. I was able to provide a lot of value on the application design and data engineering fronts. Data (relational and otherwise) just makes sense to me. I can extract it, transform it, and deliver it in a method that users understand - be it a CRUD app or BI reporting.
         </p>
 
         <h3 class="custom-font">Corporate and beyond</h3>
@@ -35,10 +35,10 @@
             In corporate land I’ve found myself doing a lot of enterprise ETL and reporting over the years. On the data warehousing and middle tiers this has been a strong mix of Oracle and SAS, in addition to a gazillion other RDBMS platforms. You name it we’ve warehoused it: SQL Server, MySQL, Tandem, Informix, Vertica, and others. On the front end it’s mostly been SAS (again), HTML, CSS, and JavaScript.
         </p>
         <p> 
-            Outside of corporate I do my best to keep up with evolving web technology. Admittedly, I’ve never been a big fan of Java and ASP.NET web stacks. While I do appreciate the robustness of traditional OOP, I just plain have more fun in languages like JavaScript. So how do I fill the gap between a strong data engineering background and the front-end web development that I’ve always enjoyed? The emergence of JavaScript as a robust, mature, server-side language was really a blessing for me. I enjoy a lot of the server-side pursuits, but I also like how frameworks like Node and Express take care of the gruesome parts and open up my time to tackle the parts of the stack that I want.
+            Outside of corporate I do my best to keep up with evolving web technology. Admittedly, I’ve never been a big fan of strongly-typed languages and their respective stacks. While I do appreciate the robustness of traditional OOP, I just plain have more fun in languages like JavaScript where I can adapt more quickly due to the loosely-typed nature. So how do I fill the gap between a strong data engineering background and the front-end web development that I’ve always enjoyed? The emergence of JavaScript as a robust, mature, server-side language was really a blessing for me. I enjoy a lot of the server-side pursuits, but I also like how frameworks like Node and Express take care of the gruesome parts and open up my time to tackle the parts of the stack that I want.
         </p> 
         <p>
-            And back on the data side – how about those document based data stores?! Very cool stuff. I’m still carving out the new region in my brain to separate the conventions of document-based storage from the traditional RDBMS realm. While Oracle and friends aren’t going anywhere for a while I have definitely enjoyed the no-overhead, open-schema environment of MongoDB in the last few personal projects I’ve done.
+            And back on the data side the NoSQL database revolution is very interesting and fun. While Oracle and friends aren’t going anywhere for a while I have definitely enjoyed the no-overhead, open-schema environment of MongoDB in the last few personal projects I’ve done. I'm in the midst of trying to get involved with some NoSQL instances running on Hadoop. With that in place, JavaScript on the server side, and things like Node orchestrating the moving pieces, we are in some very exciting times.
         </p>
 
         <p class="custom-font">
