--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -4,7 +4,7 @@
         <ul id="nav-menu">
             <li class="menu-item custom-font"><a href="/">Home</a></li>
             <li class="menu-item custom-font"><a href="https://www.linkedin.com/in/johnxsandoval" target="_blank">LinkedIn</a></li>
-            <li class="menu-item custom-font"><a href="#">Projects</a></li>
+            <li class="menu-item custom-font"><a href="/projects">Projects</a></li>
             <li class="menu-item custom-font"><a href="/journey"><span class="superfluous">The </span>Journey</a></li>
         </ul>
     </div>
