--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -24,7 +24,7 @@
             </div>
             <div class="project-description">
                 <p>
-                    The <a href="http://johnsandoval.us/ti"><strong>Team Integration App</strong></a> is a personal project inspired by disconnected Dev teams and my own interest in the emerging MEAN stack. It quickly tracks personal and team strengths and preferences. Powered by Node and MongoDB, it also makes flexes the muscle of frameworks like Twitter Bootstrap and libraries like Grunt to drive development speed. It has unit testing, a fully-functioning administrative UI, as well as architecture docs, social sign-on, and more.
+                    The <a href="http://johnsandoval.us/ti"><strong>Team Integration App</strong></a> is a personal project inspired by disconnected Dev teams and my own interest in the emerging MEAN stack. It quickly tracks personal and team strengths and preferences. Powered by Node and MongoDB, it also flexes the muscle of frameworks like Twitter Bootstrap and libraries like Grunt to drive development speed. It has unit testing, a fully-functioning administrative UI, as well as architecture docs, social sign-on, and more.
                 </p>
             </div>
             <div class="project-link">
