--- a/views/end.ejs
+++ b/views/end.ejs
@@ -1,6 +1,7 @@
 
     <!--  JavaScript -->
     <script src="/main/javascripts/application.min.js"></script>
+    <script src="//localhost:35729/livereload.js"></script>
     
 </body>
 </html>
