Header and link target updates

--- a/app/templates/components/app-footer.hbs
+++ b/app/templates/components/app-footer.hbs
@@ -2,7 +2,7 @@
     {{#link-to 'application' class="nav-link"}}
         <span data-letters="Home">Home</span>
     {{/link-to}}
-    <a href="https://www.linkedin.com/in/johnxsandoval" class="nav-link">
+    <a href="https://www.linkedin.com/in/johnxsandoval" class="nav-link" target="_blank">
         <span data-letters="LinkedIn">LinkedIn</span>
     </a>
     {{#link-to 'projects' class="nav-link"}}
