--- a/app/templates/projects/index.hbs
+++ b/app/templates/projects/index.hbs
@@ -10,11 +10,11 @@
 
         <div class="project-entry">
             <div class="project-img">
-                <a href="http://johnsandoval.us/ti"><img src="/images/ti-logo.png" alt="Team Integration App" /></a>
+                <a href="http://52.32.112.232/ti" target="_blank"><img src="/images/ti-logo.png" alt="Team Integration App" /></a>
             </div>
             <div class="project-description">
                 <p>
-                    The <a href="http://johnsandoval.us/ti" target="_blank"><strong>Team Integration App</strong></a>
+                    The <a href="http://52.32.112.232/ti" target="_blank"><strong>Team Integration App</strong></a>
                     is a personal project inspired by disconnected Dev teams and my own interest in polymorphic
                     JavaScript. It quickly tracks personal and team strengths and preferences. Powered by Node
                     and MongoDB, it also flexes the muscle of frameworks like Twitter Bootstrap and libraries
@@ -23,7 +23,7 @@
                 </p>
             </div>
             <div class="project-link">
-                <a href="http://johnsandoval.us/ti">Experience Ti</a>
+                <a href="http://52.32.112.232/ti" target="_blank">Experience Ti</a>
             </div>
         </div>
         <div class="project-entry">
@@ -34,7 +34,7 @@
                 <p>
                     This is a prototype project created for an old employer. I created a replacement for the
                     legacy BI customer reporting application. The old architecture was based on
-                    <a target="_blank" href="http://www.sas.com"><strong>SAS</strong></a> and I created the prototype on the
+                    <a target="_blank" href="http://www.sas.com" target="_blank"><strong>SAS</strong></a> and I created the prototype on the
                     latest version of the same platform. This web application adds in a modern HTML5/CSS3
                     front-end that integrates with the SAS data structure. It's a mobile-responsive design
                     that also uses a custom drag-and-drop report dashboard and Highcharts.js.
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class="project-link">
-                <a href="https://github.com/jsandoval81/lampjs">View on GitHub</a>
+                <a href="https://github.com/jsandoval81/lampjs" target="_blank">View on GitHub</a>
             </div>
         </div>
     </div>
