Added GTM/GA - Also updated the readme for ember-scrollmagic

--- a/app/templates/journey.hbs
+++ b/app/templates/journey.hbs
@@ -1,4 +1,4 @@
-<section class="journey">
+<section class="journey story">
     <div class="container">
         <div class="page-title">
             <h1 class="page-header">The Journey</h1>
