Accessibility, SEO, copy updates

--- a/app/templates/journey.hbs
+++ b/app/templates/journey.hbs
@@ -6,8 +6,8 @@
         <h2>The early days</h2>
         <p>
             I can’t believe I’m about to say this, but I actually have to give more than a miniscule shred
-            of credit to the "Career Day" at my high school. I’m not one of those who was disassembling my dad’s
-            work computer when I was 4. Nor was I in (or aware of) any computer clubs. So when the guy from a
+            of credit to the Career Day at my high school. I’m not one of those who was disassembling my dad’s
+            work computer when I was 4. Nor was I in any computer clubs. So when the guy from a
             local tech company said “go out and buy an HTML book” I did just that – and the journey began.
         </p>
         <p>
@@ -25,8 +25,8 @@
         </p>
         <p>
             Halfway through college I landed a paid internship at a local tech company. Not much web development
-            at first, but a definite crash course in enterprise architecture, networking, SDLC, and production support.
-            For several years I wore many hats - everything from business analyst to data/software engineer. I had
+            at first, but a definitive crash course in enterprise architecture, networking, SDLC, and production support.
+            For several years I wore many hats - everything from business analyst to software engineer to data architect. I had
             the opportunity to build relationships with engineers, DBAs, product managers, sys admins, etc. and see
             how all of the moving pieces fit together. I was able to provide a lot of value on the application
             architecture and data engineering fronts. Data (relational and otherwise) just makes sense to me. I
@@ -39,13 +39,13 @@
             running SQL Server, MySQL, Tandem, Informix, Vertica, and others. Though lately I've spent most of
             my time on the front-end. JavaScript has become a passion and the core of my work. I've built
             single-page-apps and server-rendered apps; sometimes with a framework (Ember), most times without.
-            The front-end tooling with Grunt, Gulp, and NPM scripts has has a community that I have not
+            The front-end tooling with Grunt, Gulp, and NPM scripts is very solid and JavaScfript has a community that I have not
             experienced on any other language or platform.
         </p>
         <p>
-            I also write Node back-ends, primarly with AWS Lambda, API Gateway, RDS, and S3. I've written Express
-            APIs on AWS EC2 instances, but Lambda has become much cheaper in most cases. Throw in tools like
-            Postman and it's probably never been easier to spin up full-stack apps.
+            I also write Node back-ends, primarly with Express on EC2, but also with AWS Lambda, API Gateway, RDS, and S3.
+            Throw in tools like Postman/Mocha/Chai/Puppeteer and it's probably never been easier to spin up full-stack
+            JavaScript apps.
         </p>
         <p>
             I'm fortunate to get the opportunity to work with a lot of trending and emerging technologies. I've
