--- a/app/templates/projects/index.hbs
+++ b/app/templates/projects/index.hbs
@@ -10,20 +10,19 @@
 
         <div class="project-entry">
             <div class="project-img">
-                <a href="http://52.32.112.232/ti" target="_blank"><img src="/images/ti-logo.png" alt="Team Integration App" /></a>
+                <a href="http://52.32.112.232/ti" target="_blank" rel="noopener noreferrer"><img src="/images/ti-logo.png" alt="Team Integration App" /></a>
             </div>
             <div class="project-description">
                 <p>
-                    The <a href="http://52.32.112.232/ti" target="_blank"><strong>Team Integration App</strong></a>
+                    The <a href="http://52.32.112.232/ti" target="_blank" rel="noopener noreferrer"><strong>Team Integration App</strong></a>
                     is a personal project inspired by disconnected Dev teams and my own interest in polymorphic
                     JavaScript. It quickly tracks personal and team strengths and preferences. Powered by Node
-                    and MongoDB, it also flexes the muscle of frameworks like Twitter Bootstrap and libraries
-                    like Grunt to drive development speed. It has unit testing, a fully-functioning administrative
-                    UI, as well as architecture docs, social sign-on, and more.
+                    and MongoDB, it also flexes the muscle of build libraries like Grunt to drive development speed. It has unit testing,
+                    a fully-functioning administrative UI, as well as architecture docs, social sign-on, and more.
                 </p>
             </div>
             <div class="project-link">
-                <a href="http://52.32.112.232/ti" target="_blank">Experience Ti</a>
+                <a href="http://52.32.112.232/ti" target="_blank" rel="noopener noreferrer">Experience Ti</a>
             </div>
         </div>
         <div class="project-entry">
@@ -32,12 +31,12 @@
             </div>
             <div class="project-description">
                 <p>
-                    This is a prototype project created for an old employer. I created a replacement for the
-                    legacy BI customer reporting application. The old architecture was based on
-                    <a target="_blank" href="http://www.sas.com" target="_blank"><strong>SAS</strong></a> and I created the prototype on the
-                    latest version of the same platform. This web application adds in a modern HTML5/CSS3
+                    This is a prototype created for a mid-size telecommunications company who was
+                    seeking a replacement of their legacy BI customer reporting application. The old architecture was based on
+                    <a target="_blank" href="http://www.sas.com" target="_blank" rel="noopener noreferrer"><strong>SAS</strong></a> and
+                    I created the prototype on the latest version of the same platform. This web application adds in a modern HTML5/CSS3
                     front-end that integrates with the SAS data structure. It's a mobile-responsive design
-                    that also uses a custom drag-and-drop report dashboard and Highcharts.js.
+                    that also uses a custom drag-and-drop report dashboard, Highcharts.js, and build/deployment automation using JavaScript.
                 </p>
             </div>
             <div class="project-link">
@@ -58,7 +57,7 @@
                 </p>
             </div>
             <div class="project-link">
-                <a href="https://github.com/jsandoval81/lampjs" target="_blank">View on GitHub</a>
+                <a href="https://github.com/jsandoval81/lampjs" target="_blank" rel="noopener noreferrer">View on GitHub</a>
             </div>
         </div>
     </div>
