--- a/app/styles/application/app-footer.less
+++ b/app/styles/application/app-footer.less
@@ -20,7 +20,7 @@
         display: inline-block;
         flex-basis: 25%;
         padding: 10px 20px;
-        font-size: @fontSize;
+        font-size: 18px;
         font-family: @fontFamilySpecial;
         color: @lightGrey;
         text-align: center;
@@ -33,32 +33,6 @@
         @media (min-width: 760px) {
             font-size: @fontSizeExtraLarge;
         }
-
-        // &::before {
-        //     position: absolute;
-        //     top: 0;
-        //     left: 0;
-        //     width: 100%;
-        //     height: 0;
-        //     background: @navHoverColor;
-        //     content: '';
-        //     -webkit-transition: top 0.3s;
-        //     -moz-transition: top 0.3s;
-        //     transition: top 0.3s;
-        // }
-        //
-        // &::after {
-        //     position: absolute;
-        //     top: 0;
-        //     left: 0;
-        //     width: 1px;
-        //     height: 0;
-        //     background: @navHoverColor;
-        //     content: '';
-        //     -webkit-transition: height 0.3s;
-        //     -moz-transition: height 0.3s;
-        //     transition: height 0.3s;
-        // }
 
         span {
             position: relative;
@@ -79,17 +53,6 @@
         }
 
         &:hover {
-
-            // &::before {
-            //     top: 100%;
-            //     height: 1px;
-            //     opacity: 1;
-            // }
-            //
-            // &::after {
-            //     height: 100%;
-            // }
-
             span::before {
                 width: 100%;
             }
@@ -98,9 +61,6 @@
 }
 
 footer {
-    font-size: @fontSizeSmall;
-
-    @media (min-width: 500px) {
-        font-size: @fontSize;
-    }
+    font-size: 16px;
+    color: darken(@lightGrey, 15%);
 }
