--- a/app/templates/components/app-footer.hbs
+++ b/app/templates/components/app-footer.hbs
@@ -1,19 +1,19 @@
-<div class="nav-menu">
+<nav class="nav-menu">
     {{#link-to 'application' class="nav-link"}}
         <span data-letters="Home">Home</span>
     {{/link-to}}
-    <a href="https://www.linkedin.com/in/johnxsandoval" class="nav-link" target="_blank">
+    <a href="https://www.linkedin.com/in/johnxsandoval" class="nav-link" target="_blank" rel="noopener noreferrer">
         <span data-letters="LinkedIn">LinkedIn</span>
     </a>
     {{#link-to 'projects' class="nav-link"}}
         <span data-letters="Projects">Projects</span>
     {{/link-to}}
     {{#link-to 'journey' class="nav-link"}}
-        <span data-letters="The Journey">The Journey</span>
+        <span data-letters="Journey">Journey</span>
     {{/link-to}}
-</div>
+</nav>
 
 <footer>
     &copy; {{copyrightYear}} John Sandoval - johnsandoval.us<br />
-    JavaScript | HTML5-CSS3 | Node.js | AWS | SQL | Ember.js
+    JavaScript | HTML5 | CSS3 | Node.js | AWS | SQL
 </footer>
