--- a/app/templates/projects/index.hbs
+++ b/app/templates/projects/index.hbs
@@ -1,28 +1,78 @@
 <section class="projects">
     <div class="container">
         <div class="page-title">
-            <h2 class="custom-font">My Recent Projects</h2>
+            <h2 class="custom-font">My Projects</h2>
         </div>
 
         <p>
-            Just a sampling of personal and prototype projects....
+            Some recent projects...
+        </p>
+
+        <div class="project-entry">
+            <div class="project-img full-width">
+                <h3>Leading real-estate transaction app</h3>
+            </div>
+            <div class="project-description">
+                <p>
+                    The COVID-19 pandemic thrust an immediate shift of traditional in-person services,
+                    such as real estate closings, towards an all-digital experience. A large-scale leading
+                    title transaction company asked us to build a multi-platform app that consolidated
+                    legacy data systems into a modern end-user experience. Complete with secure digital document
+                    signing, this app allows users to track and close their real estate transaction in an
+                    all-digital experience. The project has been so successful that we've since enhanced with
+                    features like customized insurance quotes. I was the tech & development lead for this project.
+                </p>
+            </div>
+        </div>
+        <div class="project-entry">
+            <div class="project-img full-width">
+                <h3>Leading aerospace public engagement app</h3>
+            </div>
+            <div class="project-description">
+                <p>
+                    An industry-leading aerospace contractor needed an app to promote their
+                    significant contributions to NASA Artemis missions. I was the development lead
+                    in creating a custom content management system that serves a public-facing
+                    native mobile app which showcases the customer's launch payloads and engages the
+                    public with a moderated Q&A forum and daily quizzes. It also includes a comment system that will
+                    allow public comments to be transmitted to spacecraft during live missions. In addition
+                    to standard app concerns, I also led my team to implement robust, custom content moderation
+                    using AI and best-practice administrative tooling.
+                </p>
+            </div>
+        </div>
+        <div class="project-entry">
+            <div class="project-img full-width">
+                <h3>Channel-marketing content customization app</h3>
+            </div>
+            <div class="project-description">
+                <p>
+                    Built a custom full-stack app for large-scale business / tech vendors to supply
+                    their marketing content to channel partners. Channel partners can then seamlessly
+                    add custom intros / outros to vendor videos and docments, inject custom contact
+                    information into vendor documents, and post customized content to their channels and
+                    social media. I was the tech & development lead for this project. The founder has since
+                    successfully sold this patent-pending application to a large company in the channel marketing space.
+                </p>
+            </div>
+        </div>
+
+        <p>
+            Some legacy projects...
         </p>
 
         <div class="project-entry">
             <div class="project-img">
-                <a href="http://52.32.112.232/ti" target="_blank" rel="noopener noreferrer"><img src="/images/ti-logo.png" alt="Team Integration App" /></a>
+                <img src="/images/ti-logo.png" alt="Team Integration App" />
             </div>
             <div class="project-description">
                 <p>
-                    The <a href="http://52.32.112.232/ti" target="_blank" rel="noopener noreferrer"><strong>Team Integration App</strong></a>
+                    The <strong>Team Integration App</strong>
                     is a personal project inspired by disconnected Dev teams and my own interest in polymorphic
                     JavaScript. It quickly tracks personal and team strengths and preferences. Powered by Node
                     and MongoDB, it also flexes the muscle of build libraries like Grunt to drive development speed. It has unit testing,
                     a fully-functioning administrative UI, as well as architecture docs, social sign-on, and more.
                 </p>
-            </div>
-            <div class="project-link">
-                <a href="http://52.32.112.232/ti" target="_blank" rel="noopener noreferrer">Experience Ti</a>
             </div>
         </div>
         <div class="project-entry">
@@ -31,7 +81,7 @@
             </div>
             <div class="project-description">
                 <p>
-                    This is a prototype created for a mid-size telecommunications company who was
+                    This is a prototype created for mission-critical 9-1-1 data management company who was
                     seeking a replacement of their legacy BI customer reporting application. The old architecture was based on
                     <a target="_blank" href="http://www.sas.com" target="_blank" rel="noopener noreferrer"><strong>SAS</strong></a> and
                     I created the prototype on the latest version of the same platform. This web application adds in a modern HTML5/CSS3
@@ -53,11 +103,9 @@
                     many sites out there running on LAMP stack and just inlining a lot of the HTML with very
                     minimal CSS/JS. What to do when asked to work on these sites? Well, I finally buckled down
                     and created a Node CLI that deploys and maintains a modern JS front-end within a traditional
-                    PHP web app. JS views, LESS CSS, Handlebars templates, and Grunt build automation.
+                    PHP web app. JS views, LESS CSS, Handlebars templates, and Grunt build automation. Also a custom CLI
+                    tool that scaffolds new pages with boilerplate and all the PHP / JS tie-ins.
                 </p>
-            </div>
-            <div class="project-link">
-                <a href="https://github.com/jsandoval81/lampjs" target="_blank" rel="noopener noreferrer">View on GitHub</a>
             </div>
         </div>
     </div>
