--- a/app/styles/application/projects.less
+++ b/app/styles/application/projects.less
@@ -14,6 +14,10 @@ section.projects {
             width: 100px;
             margin-bottom: 12px;
 
+            &.full-width {
+                width: 100%;
+            }
+
             img {
                 display: inline-block;
                 width: 100%;
