--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,21 +6,22 @@
     <h1>Learned and Learning</h1>
     {{!-- <div class="container skill-grid"> --}}
     {{#skill-grid}}
-        {{#skill-set}}<img src="/images/emberjs.png" alt="emberjs" />{{/skill-set}}
+        {{#skill-set}}<img src="/images/vue.png" alt="emberjs" />{{/skill-set}}
         {{#skill-set}}<img src="/images/aws.png" alt="aws" />{{/skill-set}}
-        {{#skill-set}}<img src="/images/jquery.png" alt="jquery" />{{/skill-set}}
+        {{#skill-set}}<img src="/images/nodejs.png" alt="nodejs" />{{/skill-set}}
+        {{#skill-set}}<img src="/images/mysql.png" alt="mysql" />{{/skill-set}}
+        {{#skill-set}}<img src="/images/nginx.png" alt="nginx" />{{/skill-set}}
         {{#skill-set}}<img src="/images/less.png" alt="lesscss" />{{/skill-set}}
         {{#skill-set}}<img src="/images/grunt.png" alt="grunt" />{{/skill-set}}
-        {{#skill-set}}<img src="/images/nodejs.png" alt="nodejs" />{{/skill-set}}
+        {{#skill-set}}<img src="/images/aws-cdk.png" alt="awscdk" />{{/skill-set}}
         {{#skill-set}}<img src="/images/postman.png" alt="postman" />{{/skill-set}}
+        {{#skill-set}}<img src="/images/a11y.png" alt="a11y" />{{/skill-set}}
+        {{#skill-set}}<img src="/images/mocha.svg" alt="mocha" />{{/skill-set}}
         {{#skill-set}}<img src="/images/sass.png" alt="sass" />{{/skill-set}}
         {{#skill-set}}<img src="/images/gulp.png" alt="gulp" />{{/skill-set}}
         {{#skill-set}}<img src="/images/alexa.png" alt="alexaskills" />{{/skill-set}}
         {{#skill-set}}<img src="/images/html-css.png" alt="htmlcss" />{{/skill-set}}
-        {{#skill-set}}<img src="/images/mysql.png" alt="mysql" />{{/skill-set}}
-        {{#skill-set}}<img src="/images/swift.png" alt="swift" />{{/skill-set}}
-        {{#skill-set}}<img src="/images/nginx.png" alt="nginx" />{{/skill-set}}
-        {{!-- {{#skill-set}}<img src="/images/authorize-net.png" alt="authorize.net" />{{/skill-set}} --}}
+        {{#skill-set}}<img src="/images/docker.jpeg" alt="docker" />{{/skill-set}}
         {{#skill-set}}<img src="/images/twilio.png" alt="twilio" />{{/skill-set}}
     {{/skill-grid}}
     {{!-- </div> --}}
