--- a/app/templates/journey.hbs
+++ b/app/templates/journey.hbs
@@ -35,22 +35,29 @@
         </p>
         <h2>Corporate and beyond</h2>
         <p>
-            I've logged a lot of time on ETL and reporting over the years. I've worked with architectures
-            running SQL Server, MySQL, Tandem, Informix, Vertica, and others. Though lately I've spent most of
-            my time on the front-end. JavaScript has become a passion and the core of my work. I've built
-            single-page-apps and server-rendered apps; sometimes with a framework (Ember), most times without.
-            The front-end tooling with Grunt, Gulp, and NPM scripts is very solid and JavaScfript has a community that I have not
-            experienced on any other language or platform.
+            I've logged a lot of time on ETL, reporting, and data architecture over the years. I've worked with systems
+            running Oracle, SQL Server, MySQL, Tandem, Informix, Vertica, and others. Though lately I've spent most of
+            my time building web applications. JavaScript has become a passion and the core of my app dev work. I've built
+            single-page-apps, server-rendered apps, pre-rendered apps, PWA apps; sometimes with a framework, sometimes without.
+            JavaScript has a great community and modern dev tooling that sets a pretty high bar.
         </p>
         <p>
-            I also write Node back-ends, primarly with Express on EC2, but also with AWS Lambda, API Gateway, RDS, and S3.
-            Throw in tools like Postman/Mocha/Chai/Puppeteer and it's probably never been easier to spin up full-stack
-            JavaScript apps.
+            I also write Node.js back-ends, primarly with Express. I've become very experienced at creating modern API-first apps
+            using REST conventions. My experience with ETL and data warehousing makes designing app data models a joy.
+            Automated testing is a passion. I've written high-coverage test suites for multiple frontend &amp;
+            backend apps. Not every customer has a budget for test coverage across the stack, so sometimes it's just backend /
+            data API tests (always), progressing towards minimal frontend a11y tests, and beyond.
         </p>
         <p>
-            I'm fortunate to get the opportunity to work with a lot of trending and emerging technologies. I've
-            recently created several Amazon Alexa skills for clients and I've also started to learn Swift and iOS
-            development. I've also built some Node CLIs to help scaffold and maintain JavaScript web projects.
+            I've been hosting apps on AWS architecture since 2015. I've grown beyond the standard EC2 / S3 / Route53 / RDS / IAM / VPC to include
+            business-class integrations of Cognito, Lambda, Cloudfront, WAF, SES, SNS, Sagemaker, and others.
+            Infrastructure-as-code IaC has become a focus, primarily through AWS CDK. Containers have been a major lift to our industry, making
+            apps truly portable and scalable, and also a boost to dev tooling and deployment. Which is good, because there is already enough
+            to do keeping dependencies up to date, tuning CSP headers, managing CORS, reviewing PRs, etc.
+        </p>
+
+        <p>
+            I'm fortunate to have a background in enterprise architecture and also get the opportunity to work with a lot of trending technologies.
             It's an exciting time to be a developer!
         </p>
     </div>
