Minor image and text fixes

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -21,7 +21,7 @@
         {{#skill-set}}<img src="/images/gulp.png" alt="gulp" />{{/skill-set}}
         {{#skill-set}}<img src="/images/alexa.png" alt="alexaskills" />{{/skill-set}}
         {{#skill-set}}<img src="/images/html-css.png" alt="htmlcss" />{{/skill-set}}
-        {{#skill-set}}<img src="/images/docker.jpeg" alt="docker" />{{/skill-set}}
+        {{#skill-set}}<img src="/images/docker.png" alt="docker" />{{/skill-set}}
         {{#skill-set}}<img src="/images/twilio.png" alt="twilio" />{{/skill-set}}
     {{/skill-grid}}
     {{!-- </div> --}}
