--- a/app/templates/projects/index.hbs
+++ b/app/templates/projects/index.hbs
@@ -31,7 +31,7 @@
             <div class="project-description">
                 <p>
                     An industry-leading aerospace contractor needed an app to promote their
-                    significant contributions to NASA Artemis missions. I was the development lead
+                    significant contributions to the NASA Artemis missions. I was the development lead
                     in creating a custom content management system that serves a public-facing
                     native mobile app which showcases the customer's launch payloads and engages the
                     public with a moderated Q&A forum and daily quizzes. It also includes a comment system that will
@@ -47,9 +47,9 @@
             </div>
             <div class="project-description">
                 <p>
-                    Built a custom full-stack app for large-scale business / tech vendors to supply
+                    Built a custom full-stack app for large-scale business &amp; tech vendors to supply
                     their marketing content to channel partners. Channel partners can then seamlessly
-                    add custom intros / outros to vendor videos and docments, inject custom contact
+                    add custom intros / outros to vendor videos and documents, inject custom contact
                     information into vendor documents, and post customized content to their channels and
                     social media. I was the tech & development lead for this project. The founder has since
                     successfully sold this patent-pending application to a large company in the channel marketing space.
@@ -58,7 +58,7 @@
         </div>
 
         <p>
-            Some legacy projects...
+            Some personal and legacy projects...
         </p>
 
         <div class="project-entry">
@@ -84,9 +84,9 @@
                     This is a prototype created for mission-critical 9-1-1 data management company who was
                     seeking a replacement of their legacy BI customer reporting application. The old architecture was based on
                     <a target="_blank" href="http://www.sas.com" target="_blank" rel="noopener noreferrer"><strong>SAS</strong></a> and
-                    I created the prototype on the latest version of the same platform. This web application adds in a modern HTML5/CSS3
-                    front-end that integrates with the SAS data structure. It's a mobile-responsive design
-                    that also uses a custom drag-and-drop report dashboard, Highcharts.js, and build/deployment automation using JavaScript.
+                    I created the prototype on the latest version of the same platform. This web application adds in a modern HTML5 / CSS3
+                    front-end that integrates with SAS data warehouses. It's a mobile-responsive design
+                    that also uses a custom drag-and-drop report dashboard, Highcharts.js, and build / deployment automation using JavaScript.
                 </p>
             </div>
             <div class="project-link">
@@ -101,7 +101,7 @@
                 <p>
                     I love working with modern JavaScript code and tooling. Though, there are still
                     many sites out there running on LAMP stack and just inlining a lot of the HTML with very
-                    minimal CSS/JS. What to do when asked to work on these sites? Well, I finally buckled down
+                    minimal CSS / JS. What to do when asked to work on these sites? Well, I finally buckled down
                     and created a Node CLI that deploys and maintains a modern JS front-end within a traditional
                     PHP web app. JS views, LESS CSS, Handlebars templates, and Grunt build automation. Also a custom CLI
                     tool that scaffolds new pages with boilerplate and all the PHP / JS tie-ins.
